<resources
    xmlns:tools="http://schemas.android.com/tools">
    <string name="about">About</string>
    <string name="about_by_name">By Jesus E. Valdes</string>
    <string name="about_changelog">Changelog</string>
    <string name="about_contact_me">Questions, comments, or concerns? \nFeel free to email me at</string>
    <string name="about_email_link" translatable="false">mailto:heyzeusvapps@gmail.com?subject=Plutus\' Wallet</string>
    <string name="app_email" translatable="false">heyzeusvapps@gmail.com</string>
    <string name="about_external_libraries">External Libraries Used</string>
    <string name="about_license">License</string>
    <string name="about_special_thanks">Special thanks to family, friends, and pets for all their support and Hadia A. for the icon!</string>
    <string name="about_translation_warning">Google Translate was used for localization. Please let me know of any mistakes, thank you!</string>
    <string name="about_version" translatable="false">v4.1.1</string>
    <string name="account_create">Create New Account</string>
    <string name="alert_dialog_are_you_sure">Are you sure?</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_decimal_place_warning">This will cause existing transactions to be rounded depending on decimal value. Original value can be restored ONLY IF transactions are not edited.</string>
    <string name="alert_dialog_delete_warning">Are you sure you want to delete %1$s?</string>
    <string name="alert_dialog_future_transaction">Future Transaction</string>
    <string name="alert_dialog_future_transaction_warning">This transaction has been repeated before and the date has been edited. Would you like this transaction to be able to be repeated again?</string>
    <string name="alert_dialog_no">No</string>
    <string name="alert_dialog_save">Save</string>
    <string name="alert_dialog_switch">Switch</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="app_icon">App Icon</string>
    <string name="app_name" translatable="false">Plutus\' Wallet</string>
    <string name="blank_string" translatable="false"> </string>
    <string name="category_all">All</string>
    <string name="category_create">Create New Category</string>
    <string name="cfl_no_transactions">No transactions fulfill the filters being applied!</string>
    <string name="filter_account">Account</string>
    <string name="filter_apply">Apply</string>
    <string name="filter_category">Category</string>
    <string name="filter_date">Date</string>
    <string name="filter_invalid_date_range">End date must be after start date!!</string>
    <string name="filter_end">End</string>
    <string name="filter_type">Type</string>
    <string name="filter_reset">Reset</string>
    <string name="filter_start">Start</string>
    <string name="chart_total">"Total: "</string>
    <string name="chart_amount" translatable="false">%1$s%2$s</string>
    <string name="library_mpandroidchart" tools:ignore="ExtraTranslation" translatable="false">MPAndroidChart</string>
    <string name="library_mpandroidchart_github" translatable="false">https://github.com/PhilJay/MPAndroidChart</string>
    <string name="period_days">Days</string>
    <string name="period_months">Months</string>
    <string name="period_weeks">Weeks</string>
    <string name="period_years">Years</string>
    <string name="preferences_currency_symbol">Currency Symbol</string>
    <string name="preferences_date_format">Date Format</string>
    <string name="preferences_date_full">Monday, April 19, 1993</string>
    <string name="preferences_date_long">April 19, 1993</string>
    <string name="preferences_date_medium">Apr 19, 1993</string>
    <string name="preferences_date_short">4/19/93</string>
    <string name="preferences_decimal_places_summary_off">Decimal places cannot be used.</string>
    <string name="preferences_decimal_places_summary_on">Decimal places can be used.</string>
    <string name="preferences_decimal_symbol">Decimal Separator Symbol</string>
    <string name="preferences_language">Language</string>
    <string name="preferences_decimal_number">Decimal Places</string>
    <string name="preferences_currency_symbol_side">Currency Symbol Side</string>
    <string name="preferences_symbol_side_summary_off">Currency symbol will appear on right side.</string>
    <string name="preferences_symbol_side_summary_on">Currency symbol will appear on left side.</string>
    <string name="preferences_thousands_symbol">Thousands Separator Symbol</string>
    <string name="settings">Settings</string>
    <string name="snackbar_saved">Transaction saved!</string>
    <string name="total_number" translatable="false">%1$s</string>
    <string name="total_number_symbol" translatable="false">%1$s%2$s</string>
    <string name="transaction_account">Account</string>
    <string name="transaction_blank_hint" translatable="false"> </string>
    <string name="transaction_category">Category</string>
    <string name="transaction_date">Date</string>
    <string name="transaction_empty_title">"Transaction "</string>
    <string name="transaction_frequency">Frequency</string>
    <string name="transaction_memo">Memo</string>
    <string name="transaction_memo_hint">\u2517 Additional information</string>
    <string name="transaction_repeat">Repeat</string>
    <string name="transaction_title">Title</string>
    <string name="transaction_title_hint">\u2517 Location of purchase</string>
    <string name="transaction_total">Total</string>
    <string name="type_expense">Expense</string>
    <string name="type_income">Income</string>
    <string name="categories">Categories</string>
    <string name="alert_dialog_edit_account">Edit Account</string>
    <string name="alert_dialog_input_hint">Enter A Name</string>
    <string name="alert_dialog_create_account">Create Account</string>
    <string name="alert_dialog_edit_category">Edit Category</string>
    <string name="alert_dialog_create_category">Create Category</string>
    <string name="alert_dialog_delete_account">Delete Account</string>
    <string name="alert_dialog_delete_category">Delete Category</string>
    <string name="alert_dialog_delete_transaction">Delete Transaction</string>
    <string name="snackbar_exists">%1$s already exists!</string>
    <string name="alert_dialog_duplicate_symbols">Duplicate Symbols</string>
    <string name="alert_dialog_duplicate_symbols_warning">The thousands and decimal separators cannot be the same, would you like to switch them?</string>
    <string name="accounts">Accounts</string>
    <string name="account_new">New Account</string>
    <string name="category_new">New Category</string>
    <string name="cfl_menu_transaction">New Transaction</string>
    <string name="transaction_save">Save Transaction</string>
    <string name="transaction">Transaction</string>
    <string name="cfl_overview">Overview</string>
    <string name="cfl_drawer_description">Open Navigation Drawer</string>
    <string name="navigate_back">Navigate Back</string>
    <string name="app_github_link" translatable="false">https://github.com/HeyZeusV/PlutusWallet</string>
    <string name="about_github" translatable="false">GitHub</string>
    <string name="preferences_theme">Theme</string>
    <string name="preferences_theme_light">Light</string>
    <string name="preferences_theme_dark">Dark</string>
    <string name="preferences_theme_system">System</string>
    <string name="alert_dialog_input_error">Can\'t be blank!</string>
    <string name="transaction_period">Period</string>
    <string name="cfl_menu_filter">Edit Filter</string>
    <string name="filter_no_selected_account">Please select at least one account!!</string>
    <string name="filter_no_selected_category">Please select at least one category!!</string>
    <string name="filter_no_selected_dates">Please select start and end dates!!</string>
    <string name="data_edit">Edit</string>
    <string name="data_delete">Delete</string>
    <string name="about_privacy_policy">Privacy Policy</string>
    <string name="about_privacy_policy_link" translatable="false">https://doc-hosting.flycricket.io/plutus-wallet-privacy-policy/2b4e7d61-0f8b-4e18-9634-d94fc965faf9/privacy</string>
    <string name="icon_cd_expandcollapse">Expand or collapse</string>
    <string name="icon_cd_inputError">Input error</string>
    <string name="alert_dialog_closeapp">Close app</string>
    <string name="alert_dialog_closeapp_message">Would you like to close the app?</string>
    <string name="preferences_view">View</string>
    <string name="preferences_view_yearly">Yearly</string>
    <string name="preferences_view_monthly">Monthly</string>
    <string name="preferences_view_weekly">Weekly</string>
    <string name="preferences_view_daily">Daily</string>

    <string name="tt_about_file" translatable="false">File %1$s</string>
    <string name="tt_ad" translatable="false">AlertDialog</string>
    <string name="tt_ad_confirm" translatable="false">AlertDialog Confirm</string>
    <string name="tt_ad_dismiss" translatable="false">AlertDialog Dismiss</string>
    <string name="tt_ad_option" translatable="false">AlertDialog Option %1$s</string>
    <string name="tt_ad_input" translatable="false">AlertDialog Input</string>
    <string name="tt_app_bar" translatable="false">AppBar</string>
    <string name="tt_app_barTitle" translatable="false">AppBar %1$s</string>
    <string name="tt_app_drawItem" translatable="false">DrawerItem %1$s</string>
    <string name="tt_app_scaffold" translatable="false">PWApp Scaffold</string>
    <string name="tt_chart_empty" translatable="false">Empty Chart for page %1$d</string>
    <string name="tt_chart_page" translatable="false">Chart Page %1$d</string>
    <string name="tt_chart_total" translatable="false">Chart Total for page %1$d</string>
    <string name="tt_chart_vp" translatable="false">Chart ViewPager</string>
    <string name="tt_filter_act" translatable="false">Filter Action</string>
    <string name="tt_filter_card" translatable="false">Filter Card</string>
    <string name="tt_filter_chip" translatable="false">Chip: %1$s</string>
    <string name="tt_filter_end" translatable="false">Filter End Date</string>
    <string name="tt_filter_start" translatable="false">Filter Start Date</string>
    <string name="tt_filter_type" translatable="false">%1$s Button</string>
    <string name="tt_list_delete" translatable="false">%1$s Delete</string>
    <string name="tt_list_edit" translatable="false">%1$s Edit</string>
    <string name="tt_list_sub" translatable="false">List Subtitle %1$s</string>
    <string name="tt_list_vp" translatable="false">List ViewPager</string>
    <string name="tt_set_name" translatable="false">%1$s</string>
    <string name="tt_set_select" translatable="false">%1$s %2$s</string>
    <string name="tt_tran_ddmItem" translatable="false">DropdownMenuItem %1$s</string>
    <string name="tt_tranL_empty" translatable="false">Empty Transaction List</string>
    <string name="tt_tranL_item" translatable="false">TranList item %1$d</string>
</resources>